--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^0.11.2",
     "electron": "^1.7.10",
     "electron-packager": "^10.1.1",
+    "googleapis": "^25.0.0"
+  },
+  "devDependencies": {
+    "electron-rebuild": "^1.7.3"
   }
 }
