--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google-cloud/firestore": "^0.11.2",
     "electron": "^1.7.10",
     "electron-packager": "^10.1.1",
-    "googleapis": "^25.0.0"
+    "googleapis": "^25.0.0",
+    "moment": "^2.21.0"
   },
   "devDependencies": {
     "electron-rebuild": "^1.7.3"
